--- a/src/main/web/src/style.css
+++ b/src/main/web/src/style.css
@@ -21,8 +21,9 @@
 }
 
 .drafts {
-    display: grid;
-    justify-content: center;
+    /*padding: 20px;*/
+    /*display: grid;*/
+    /*justify-content: center;*/
 }
 
 .main {
